# sd2flac

./: pyproject.toml  sd2_to_flac.py  sd2_to_flac_gui.py  setup_app.py
.github/workflows/: build-app.yml
